--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -2,7 +2,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  
+  border-top: 1.5px solid black;
+  margin: 2rem 0;
 }
 
 .about {
@@ -15,6 +16,7 @@
   border-radius: 12px 12px 12px 0; 
   border: 3px solid var(--red-800);
   margin-bottom: 1rem;
+  margin-top: 2rem;
 }
 
 .about strong{
