--- a/src/components/Overview.module.css
+++ b/src/components/Overview.module.css
@@ -1,4 +1,16 @@
+.description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem 1.5rem;
+}
 
+.description strong {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
 
 .cards {
   display: grid;
